[project]
name = "FHIL_python_utils"

dynamic = ["version"]
authors = [
  { name="Derrik Gratz", email="derrik.gratz@gmail.com" },
]
description = "General utility functions for Python data analysis and visualization"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "numpy",
  "scanpy",
  "seaborn",
  "matplotlib",
  "pybiomart",
  "anndata"
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
svm = ["sklearn"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Fred-Hutch-Innovation-Lab/python_utils"
Issues = "https://github.com/Fred-Hutch-Innovation-Lab/python_utils/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
