[build-system]
requires = ["setuptools >= 61.2"]

[project]
name = "FHIL_python_utils"
authors = [{ name="Derrik Gratz", email="derrik.gratz@gmail.com" }]
description = "General utility functions for Python data analysis and visualization at Fred Hutch Innovation Lab"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*", "vendored/licenses/*.txt", "AUTHORS.md"]
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "numpy",
  "scanpy",
  "seaborn",
  "matplotlib",
  "pybiomart",
  "anndata"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
version = {attr = "FHIL_python_utils.__version__"}

[project.urls]
Homepage = "https://github.com/Fred-Hutch-Innovation-Lab/FHIL_python_utils"
Repository = "https://github.com/Fred-Hutch-Innovation-Lab/FHIL_python_utils"
